Hide/reveal the move date field based on checkbox

--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -72,6 +72,21 @@
     }
 }
 
+.form__hide {
+    max-height: 0;
+    overflow: hidden;
+    margin-bottom: 0;
+    opacity: 0;
+    transition: max-height 0.3s ease-in-out, margin-bottom 0.3s ease-in-out, opacity 0.3s;
+
+    &.form__reveal {
+        transform: translateZ(0);
+        max-height: 30rem;
+        opacity: 1;
+        margin-bottom: 1px;
+    }
+}
+
 .form__input,
 .form__select,
 .form__textarea,
