--- a/assets/templates/pages/affiliates/index.html
+++ b/assets/templates/pages/affiliates/index.html
@@ -31,10 +31,10 @@
             <label for="zip" class="form__label">Zip Code *</label>
         </div>
         <div class="row form__row form__row--checkbox">
-            <input type="checkbox" class="form__checkbox" name="moving-to" id="moving-to">
+            <input type="checkbox" class="form__checkbox interaction--form-reveal-on-fill" data-target=".interaction--address-reveal" name="moving-to" id="moving-to">
             <label for="moving-to" class="form__label">I am moving to the address provided, I do not currently live there.</label>
         </div>
-        <div class="row form__row form__row--has-icon">
+        <div class="row form__row form__row--has-icon interaction--address-reveal">
             <i class="icon icon--calendar icon--light icon--fixed"></i>
             <input type="text" class="form__input form__date" name="move-date" id="move-date">
             <label for="move-date" class="form__label">Move Date</label>
