--- a/assets/templates/pages/affiliates/index.html
+++ b/assets/templates/pages/affiliates/index.html
@@ -167,7 +167,12 @@
             </div>
         </div>
     </div>
-    <button class="button button--full-width form__button">Next Step</button>
+    <button class="button button--full-width form__button button--swipe">
+        <span class="swipe-holder">
+            Next Step
+            <span data-text="Next&nbsp;Step"></span>
+        </span>
+    </button>
 </form>
 <section class="page__section overlay overlay--light page__section--grid interaction--load">
     {{ providerGrid.grid("../media/providers/grey/") }}
