--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -189,6 +189,17 @@
     }
 }
 
+.page--inner .page__section--grid {
+    .grid__item {
+        opacity: 0.5;
+        transition: opacity 0.3s ease-out;
+    }
+
+    .interaction--attention .grid__item {
+        opacity: 1;
+    }
+}
+
 .section__header {
     text-align: center;
 
