--- a/assets/sass/base/main.scss
+++ b/assets/sass/base/main.scss
@@ -25,8 +25,7 @@ body {
     }
 
     > header,
-    > section,
-    > .page__identifier {
+    > section {
         padding-left: 3.6rem;
         padding-right: 3.6rem;
     }
