--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -212,6 +212,8 @@
     margin-top: 1.2rem;
     margin-bottom: 1.2rem;
     font-size: 1.2rem;
+    padding-left: 3.6rem;
+    padding-right: 3.6rem;
 
     @include bp--l {
         font-size: 1.7rem;
