--- a/assets/templates/pages/affiliates/index.html
+++ b/assets/templates/pages/affiliates/index.html
@@ -1,4 +1,5 @@
 {% set asset_location = "../" %}
+{% set page = "inner" %}
 {% extends "layout.nunjucks" %}
 {% import "_macros/provider-grid.nunjucks" as providerGrid %}
 
@@ -6,12 +7,16 @@
 
 {% block content %}
 {% include "_partials/process-nav.nunjucks" %}
-<p class="row row--wide page__identifier">#75396639</p>
-<header class="row row--wide page__header page-header">
+<div class="media__loader--holder">
+    <div class="media__loader media__loader--inside"></div>
+    <div class="media__loader media__loader--outside"></div>
+</div>
+<p class="row row--wide page__identifier interaction--load">#75396639</p>
+<header class="row row--wide page__header page-header interaction--load">
     <h1 class="page__title page-header__title">Find Services in Your Area</h1>
     <p class="page-header__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam magni, cumque nostrum unde, accusantium sequi nesciunt repellat quos dolor molestias quasi saepe est. Molestias quisquam eligendi perferendis, veritatis rem cupiditate?</p>
 </header>
-<form action="" class="row row--wide row--wide-form form form--light">
+<form action="" class="row row--wide row--wide-form form form--light interaction--load">
     <div class="column column--m column--m-padded column--m-1-2">
         <div class="row form__row">
             <input type="text" class="form__input" name="address_1" id="address_1">
@@ -26,10 +31,10 @@
             <label for="zip" class="form__label">Zip Code *</label>
         </div>
         <div class="row form__row form__row--checkbox">
-            <input type="checkbox" class="form__checkbox" name="moving-to" id="moving-to">
+            <input type="checkbox" class="form__checkbox interaction--form-reveal-on-fill" data-target=".interaction--address-reveal" name="moving-to" id="moving-to">
             <label for="moving-to" class="form__label">I am moving to the address provided, I do not currently live there.</label>
         </div>
-        <div class="row form__row form__row--has-icon">
+        <div class="row form__row form__row--has-icon interaction--address-reveal">
             <i class="icon icon--calendar icon--light icon--fixed"></i>
             <input type="text" class="form__input form__date" name="move-date" id="move-date">
             <label for="move-date" class="form__label">Move Date</label>
@@ -162,7 +167,12 @@
             </div>
         </div>
     </div>
-    <button class="button button--full-width form__button">Next Step</button>
+    <button class="button button--full-width form__button button--swipe">
+        <span class="swipe-holder">
+            Next Step
+            <span data-text="Next&nbsp;Step"></span>
+        </span>
+    </button>
 </form>
 <section class="page__section overlay overlay--light page__section--grid interaction--load">
     {{ providerGrid.grid("../media/providers/grey/") }}
