--- a/assets/sass/components/nav.scss
+++ b/assets/sass/components/nav.scss
@@ -85,12 +85,15 @@
 
             @include bp--m {
                 max-width: 17.4rem;
-                margin-left: auto;
-                margin-right: auto;
+                margin-left: 2.4rem;
             }
 
             @include bp(900) {
                 max-width: 21.2rem;
+            }
+
+            @include bp--l {
+                margin-left: 3.6rem;
             }
 
             @include bp--xl {
@@ -122,6 +125,11 @@
         color: $color-orange;
         font-size: 1.6rem;
         height: 3.4rem;
+        transition: background 0.3s;
+
+        &:hover {
+            background: darken($color-blue, 10%);
+        }
 
         @include bp--m {
             top: 50%;
