--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -2,6 +2,10 @@
 // Page //
 //////////
 
+.page--inner {
+    color: $color-semi-dark;
+}
+
 .page__header {
     padding-bottom: 4.8rem;
 
@@ -158,6 +162,44 @@
     }
 }
 
+.page--inner .page__footer {
+    padding-top: 3.6rem;
+    padding-bottom: 3.6rem;
+
+    @include bp--l {
+        .section__footer .footer__brand {
+            margin-bottom: 4.8rem;
+        }
+
+        p {
+            margin-bottom: 0.6rem;
+        }
+
+        a {
+            padding: 0 0.6rem;
+
+            &:first-child {
+                padding-left: 0;
+            }
+
+            &:last-child {
+                padding-right: 0;
+            }
+        }
+    }
+}
+
+.page--inner .page__section--grid {
+    .grid__item {
+        opacity: 0.5;
+        transition: opacity 0.3s ease-out;
+    }
+
+    .interaction--attention .grid__item {
+        opacity: 1;
+    }
+}
+
 .section__header {
     text-align: center;
 
@@ -170,6 +212,8 @@
     margin-top: 1.2rem;
     margin-bottom: 1.2rem;
     font-size: 1.2rem;
+    padding-left: 3.6rem;
+    padding-right: 3.6rem;
 
     @include bp--l {
         font-size: 1.7rem;
