Fix IE9/10 not supporting pointer-events: none in css

--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -450,6 +450,7 @@ select[data-ss-uuid] {
         pointer-events: none;
         border: 0;
         transition: opacity 0.3s;
+        display: none;
 
         .ss-option {
             width: 100%;
@@ -478,6 +479,7 @@ select[data-ss-uuid] {
             pointer-events: auto;
             transform: translateZ(0);
             opacity: 1;
+            display: block;
         }
 
         .ss-selected-option::after {
