Move affiliate checkbox group to array'd checkboxes

--- a/assets/templates/pages/affiliates/index.html
+++ b/assets/templates/pages/affiliates/index.html
@@ -67,86 +67,86 @@
             <div class="column column--m column--m-padded column--m-1-2 form__list form-list form-list--checkbox">
                 <p class="form-list__label">I currently have:</p>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_high-speed" name="exist_high-speed" class="form__checkbox">
+                    <input type="checkbox" id="exist_high-speed" name="exist[high-speed]" class="form__checkbox">
                     <label for="exist_high-speed" class="form__label">High Speed</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_dial-up" name="exist_dial-up" class="form__checkbox">
+                    <input type="checkbox" id="exist_dial-up" name="exist[dial-up]" class="form__checkbox">
                     <label for="exist_dial-up" class="form__label">Dial-up</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_digital-cable" name="exist_digital-cable" class="form__checkbox">
+                    <input type="checkbox" id="exist_digital-cable" name="exist[digital-cable]" class="form__checkbox">
                     <label for="exist_digital-cable" class="form__label">Digital Cable</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_cable-dvr" name="exist_cable-dvr" class="form__checkbox">
+                    <input type="checkbox" id="exist_cable-dvr" name="exist[cable-dvr]" class="form__checkbox">
                     <label for="exist_cable-dvr" class="form__label">Cable DVR</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_digital-phone" name="exist_digital-phone" class="form__checkbox">
+                    <input type="checkbox" id="exist_digital-phone" name="exist[digital-phone]" class="form__checkbox">
                     <label for="exist_digital-phone" class="form__label">Digital Phone</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_dsl" name="exist_dsl" class="form__checkbox">
+                    <input type="checkbox" id="exist_dsl" name="exist[dsl]" class="form__checkbox">
                     <label for="exist_dsl" class="form__label">DSL</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_basic-cable" name="exist_basic-cable" class="form__checkbox">
+                    <input type="checkbox" id="exist_basic-cable" name="exist[basic-cable]" class="form__checkbox">
                     <label for="exist_basic-cable" class="form__label">Basic Cable</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_cable-hd" name="exist_cable-hd" class="form__checkbox">
+                    <input type="checkbox" id="exist_cable-hd" name="exist[cable-hd]" class="form__checkbox">
                     <label for="exist_cable-hd" class="form__label">Cable HDTV</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_satellite" name="exist_satellite" class="form__checkbox">
+                    <input type="checkbox" id="exist_satellite" name="exist[satellite]" class="form__checkbox">
                     <label for="exist_satellite" class="form__label">Satellite TV</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_cable-home-network" name="exist_cable-home-network" class="form__checkbox">
+                    <input type="checkbox" id="exist_cable-home-network" name="exist[cable-home-network]" class="form__checkbox">
                     <label for="exist_cable-home-network" class="form__label">Cable Home Network</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="exist_dont-know" name="exist_dont-know" class="form__checkbox">
+                    <input type="checkbox" id="exist_dont-know" name="exist[dont-know]" class="form__checkbox">
                     <label for="exist_dont-know" class="form__label">I don't know</label>
                 </div>
             </div>
             <div class="column column--m column--m-padded column--m-1-2 form__list form-list form-list--checkbox">
                 <p class="form-list__label">I'm interested in:</p>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_high-speed" name="interest_high-speed" class="form__checkbox">
+                    <input type="checkbox" id="interest_high-speed" name="interest[high-speed]" class="form__checkbox">
                     <label for="interest_high-speed" class="form__label">High Speed</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_digital-cable" name="interest_digital-cable" class="form__checkbox">
+                    <input type="checkbox" id="interest_digital-cable" name="interest[digital-cable]" class="form__checkbox">
                     <label for="interest_digital-cable" class="form__label">Digital Cable</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_dvr" name="interest_dvr" class="form__checkbox">
+                    <input type="checkbox" id="interest_dvr" name="interest[dvr" class="form__checkbox"]>
                     <label for="interest_dvr" class="form__label">DVR</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_home-network" name="interest_home-network" class="form__checkbox">
+                    <input type="checkbox" id="interest_home-network" name="interest[home-network]" class="form__checkbox">
                     <label for="interest_home-network" class="form__label">Home Network</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_wireless-data" name="interest_wireless-data" class="form__checkbox">
+                    <input type="checkbox" id="interest_wireless-data" name="interest[wireless-data]" class="form__checkbox">
                     <label for="interest_wireless-data" class="form__label">Wireless Data</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_basic-cable" name="interest_basic-cable" class="form__checkbox">
+                    <input type="checkbox" id="interest_basic-cable" name="interest[basic-cable]" class="form__checkbox">
                     <label for="interest_basic-cable" class="form__label">Basic Cable</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_hdtv" name="interest_hdtv" class="form__checkbox">
+                    <input type="checkbox" id="interest_hdtv" name="interest[hdtv]" class="form__checkbox">
                     <label for="interest_hdtv" class="form__label">HDTV</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_digital-phone" name="interest_digital-phone" class="form__checkbox">
+                    <input type="checkbox" id="interest_digital-phone" name="interest[digital-phone]" class="form__checkbox">
                     <label for="interest_digital-phone" class="form__label">Digital Phone</label>
                 </div>
                 <div class="form-list__item form-list__item--checkbox">
-                    <input type="checkbox" id="interest_wireless-voice" name="interest_wireless-voice" class="form__checkbox">
+                    <input type="checkbox" id="interest_wireless-voice" name="interest[wireless-voice]" class="form__checkbox">
                     <label for="interest_wireless-voice" class="form__label">Wireless Voice</label>
                 </div>
             </div>
