work in progress to incorporate only the header

--- a/assets/sass/components/process-list.scss
+++ b/assets/sass/components/process-list.scss
@@ -81,7 +81,12 @@
             }
         }
     }
-
+        
+    &--complete {
+        color: $color-orange;
+        position: relative;
+    }
+    
     &__text {
         display: none;
         font-size: 8px;
