--- a/assets/sass/components/form.scss
+++ b/assets/sass/components/form.scss
@@ -311,14 +311,14 @@
             content: "";
             position: absolute;
             top: 50%;
-            left: 1.0rem;
+            left: 1.2rem;
             padding: 0.3rem;
             background: $color-blue;
             transform: translate(0, -50%);
             z-index: 2;
             opacity: 0;
 
-            @include bp--m {
+            @include bp--l {
                 left: 1.9rem;
                 padding: 0.6rem;
                 border-radius: 0.1rem;
