--- a/assets/sass/components/process-list.scss
+++ b/assets/sass/components/process-list.scss
@@ -106,6 +106,13 @@
             font-size: 1.6rem;
         }
     }
+    
+    &__cart-text
+    {
+        display: none;
+        font-size: 8px;
+        font-family: $font-emph;
+    }
 
     &__img {
         margin-left: auto;
